--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -295,7 +295,7 @@ http://www.tooplate.com/view/2098-health
   }
 
   header span i {
-    color: #a5c422;
+    color: #000000;
     margin-right: 5px;
   }
 
@@ -319,7 +319,7 @@ http://www.tooplate.com/view/2098-health
   }
 
   .navbar-default .navbar-brand .fa {
-    color: #a5c422;
+    color: #000000;
   }
 
   .navbar-default .navbar-nav li.appointment-btn {
@@ -469,10 +469,17 @@ http://www.tooplate.com/view/2098-health
   -----------------------------------------*/
 
   #about {
-    background: url('../images/about-bg.jpg') no-repeat top center;
+    background: url('../images/a2.png') no-repeat top center;
     background-size: cover;
     padding-top: 150px;
     padding-bottom: 150px;
+  }
+
+  #book{
+    background-size: cover;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    
   }
 
   .profile img,
@@ -570,7 +577,7 @@ http://www.tooplate.com/view/2098-health
   -----------------------------------------*/
 
   #service {
-    background: #a5c422;
+    background: #000000;
   }
 
   #service h2,
