--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -469,7 +469,7 @@ http://www.tooplate.com/view/2098-health
   -----------------------------------------*/
 
   #about {
-    background: url('../images/a2.png') no-repeat top center;
+    background: url('../images/Aboutas.png') no-repeat top center;
     background-size: cover;
     padding-top: 150px;
     padding-bottom: 150px;
@@ -597,7 +597,7 @@ http://www.tooplate.com/view/2098-health
     font-size: 50px;
     margin-bottom: 10px;
     background: #ffffff;
-    color: #a5c422;
+    color: #000000;
     width: 120px;
     height: 120px;
     line-height: 120px;
