--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -187,7 +187,7 @@ http://www.tooplate.com/view/2098-health
 
 
   #about, #team, #news,
-  #news-detail {
+  #news-detail, #wise {
     position: relative;
     padding-top: 100px;
     padding-bottom: 100px;
@@ -468,7 +468,7 @@ http://www.tooplate.com/view/2098-health
       ABOUT              
   -----------------------------------------*/
 
-  #about {
+  #news {
     background: url('../images/wh.avif') no-repeat top center;
     background-size: cover;
     padding-top: 150px;
