commited by amol

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -452,15 +452,15 @@ http://www.tooplate.com/view/2098-health
   }
 
   .slider .item-first {
-    background-image: url(../images/slider1.jpg);
+    background-image: url(../images/N4.jpg);
   }
 
   .slider .item-second {
-    background-image: url(../images/slider2.jpg);
+    background-image: url(../images/N5.jpg);
   }
 
   .slider .item-third {
-    background-image: url(../images/slider3.jpg);
+    background-image: url(../images/N3.jpg);
   }
 
 
@@ -480,6 +480,12 @@ http://www.tooplate.com/view/2098-health
     padding-top: 150px;
     padding-bottom: 150px;
     
+  }
+  #team{
+    background: url('../images/about-bg.jpg') no-repeat top center;
+    background-size: cover;
+    padding-top: 150px;
+    padding-bottom: 150px;
   }
 
   .profile img,
